[package]
name = "crusty"
version = "0.5.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"
description = "Fast && scalable Broad Web Crawler developed on top of crusty-core"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/let4be/crusty"
keywords = ["broad", "crawler", "rust", "async", "multi-threaded"]

[profile.dev]
panic = "unwind"
debug-assertions = false

[profile.release]
panic = "unwind"
debug-assertions = false
opt-level = 3

[dependencies]
tracing-tools = "~0.1.0"
crusty-core = "~0.15.0"

futures-lite = "~1.11.3"
futures = "~0.3.14"
serde_yaml = "~0.8.17"
serde = {version = "~1.0.125", features = ["derive"] }
tokio = { version = "~1.6.0", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros", "signal"] }

clickhouse = "~0.6.2"
http = "~0.2.3"
tracing = "~0.1.25"
tracing-subscriber = "~0.2.17"
tracing-futures = "~0.2.5"
chrono = "~0.4.19"
ttl_cache = "~0.5.1"
crc32fast = "~1.2.1"
anyhow = "~1.0.40"
futures-util = "~0.3.14"
bytes = "~1.0.1"
reflection = "~0.1.3"
reflection_derive = "~0.1.1"
backoff = {version = "~0.3.0", features = ["tokio", "futures"] }
num_cpus = "~1.13.0"
url = "~2.2.1"
once_cell = "~1.7.2"
fdlimit = "~0.2.1"
humanize-rs = "~0.1"

[[bin]]
name = "crusty"
path = "src/main.rs"
