[profile.dev]
panic = "unwind"
debug-assertions = false

[profile.release]
panic = "unwind"
debug-assertions = false
opt-level = 3

[workspace]
    members = [
        "workspace/main",
        "workspace/interop",
        "workspace/redis-utils",
        "workspace/redis-queue",
        "workspace/redis-calc",
    ]
