[package]
name = "interop"
version = "0.1.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"
description = "Interop types for crusty"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/let4be/crusty"

[dependencies]
serde = {version = "~1.0.125", features = ["derive"] }
