[package]
name = "crusty"
version = "0.12.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"
description = "Fast && scalable Broad Web Crawler developed on top of crusty-core"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/let4be/crusty"
keywords = ["broad", "crawler", "rust", "async", "multi-threaded"]
build = "src/build.rs"

[features]
# very fast, but slightly harder to use and some advanched parsing is impossible
lol_html_parser = ["lol_html"]
# slower, but easier to use and can extract almost enything
html5ever_parser = ["html5ever"]
default = ["lol_html_parser"]

[dependencies]
crusty-core = {version="~0.55.0"}
tracing-tools = "~0.5.0"

interop = {path = "../interop"}

tokio = { version = "~1.7.0", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros", "signal"] }
futures = "~0.3.14"

clickhouse = "~0.7.0"
redis = { version = "~0.20.1", features = ["tokio-comp", "aio"] }

serde_yaml = "~0.8.17"
serde_json = "1.0"
serde = {version = "~1.0.125", features = ["derive"] }
http = "~0.2.3"
tracing = "~0.1.25"
tracing-subscriber = "~0.2.17"
tracing-futures = "~0.2.5"
ttl_cache = "~0.5.1"
crc32fast = "~1.2.1"
anyhow = "~1.0.40"
bytes = "~1.0.1"
backoff = {version = "~0.3.0", features = ["tokio", "futures"] }
num_cpus = "~1.13.0"
url = "~2.2.1"
once_cell = "~1.8.0"
fdlimit = "~0.2.1"
humanize-rs = "~0.1"
relabuf = "~0.10.0"
base64 = "~0.13.0"

html5ever = {version = "~0.25.1", optional = true}
lol_html = {version = "~0.3.0", optional = true}

[build-dependencies]
vergen = {version = "~5", features = ["build", "cargo", "git", "rustc"] }
anyhow = "~1.0.40"

[[bin]]
name = "crusty"
path = "src/main.rs"
