[package]
name = "redis-calc"
version = "0.1.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"
description = "Crusty topk calc and other stuff"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/let4be/crusty"
keywords = []

[lib]
crate-type = ["cdylib"]

[dependencies]
redis-utils = {path = "../redis-utils"}
interop = {path = "../interop"}

anyhow = "~1.0.40"
thiserror = "~1.0.24"
serde = {version = "~1.0.125", features = ["derive"] }
serde_json = "1.0"
redis-module = "~0.18.0"
validator = { version = "~0.13.0", features = ["derive"] }
