[package]
name = "crusty"
version = "0.12.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2021"
description = "Fast && scalable Broad Web Crawler developed on top of crusty-core"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/let4be/crusty"
keywords = ["broad", "crawler", "rust", "async", "multi-threaded"]
build = "src/build.rs"

[features]
# very fast, but slightly harder to use and some advanched parsing is impossible
lol_html_parser = ["lol_html"]
# slower, but easier to use and can extract almost enything
html5ever_parser = ["html5ever"]
default = ["lol_html_parser"]

[dependencies]
tokio = { version = "^1.12", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros", "signal"] }
itertools = "~0.10.1"
strum = { version = "0.22", features = ["derive"] }
anyhow = "~1.0.40"
futures = "~0.3.14"
tracing = "~0.1.25"
tracing-subscriber = {version = "~0.3.0", features = ["env-filter"]}
tracing-futures = "~0.2.5"

interop = {path = "../interop" }
crusty-core = {version="^0.80"}
tracing-tools = "~0.5.0"

clickhouse = "~0.9.1"
redis = { version = "~0.21.0", features = ["tokio-comp", "aio"] }

serde_yaml = "~0.8.17"
serde_json = "1.0"
serde = {version = "~1.0.125", features = ["derive"] }
http = "~0.2.3"
cache_2q = "~0.10.1"
crc32fast = "~1.2.1"
bytes = "~1.1.0"
backoff = {version = "~0.3.0", features = ["tokio", "futures"] }
num_cpus = "~1.13.0"
url = "~2.2.1"
once_cell = "~1.8.0"
fdlimit = "~0.2.1"
humanize-rs = "~0.1"
relabuf = "~0.16.0"
base64 = "~0.13.0"
html5ever = {version = "~0.25.1", optional = true}
lol_html = {version = "~0.3.0", optional = true}

[build-dependencies]
vergen = {version = "~5", features = ["build", "cargo", "git", "rustc"] }
anyhow = "~1.0.40"

[[bin]]
name = "crusty"
path = "src/main.rs"
